[Add]コメント機能

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -32,6 +32,10 @@
         </td>
         <% end %>
         
+        <td>
+          コメント数：<%= book.book_comments.count %>
+        </td>
+        
       </tr>
     <% end %>
   </tbody>
