--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,8 +17,8 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
         
-        <td id="fav">
-             <%=render "favorites/favorite",book: book%> 
+        <td id="fav_<%= book.id %>">
+             <%= render "favorites/favorite",book: book %> 
         </td>
            
        
