--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,7 +18,9 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
           
-          <td><%=render "favorites/favorite",book: @book%> </td>
+          <td id="fav_<%=@book.id %>">
+            <%=render "favorites/favorite",book: @book%> 
+          </td>
         
           <td>コメント数：<%= @book.book_comments.count %></td>
             
@@ -29,9 +31,9 @@
         </tr>
       </table>
       
-      <div><%=render "comment_index", book: @book%></div>
+      <div　class=comment_index><%=render "comment_index", book: @book%></div>
       <div> 
-        <%= form_with model: [@book, @book_comment] do |f| %>
+        <%= form_with model: [@book, @book_comment], local: false do |f| %>
         <%= f.text_area :comment, rows: '5' %>
         <%= f.submit "送信" %>
         <% end %>
