--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$("#fav").html("<%= j(render 'favorites/favorite', book: @book) %>");
+$("#fav_<%= @book.id %>").html("<%= j(render 'favorites/favorite', book: @book) %>");
