--- a/app/views/book_comments/_comment_index.html.erb
+++ b/app/views/book_comments/_comment_index.html.erb
@@ -3,10 +3,10 @@
         <p><%= image_tag book_comment.user.get_profile_image, size: '50x50' %>
           <%= book_comment.comment %>
           <% if book_comment.user == current_user %>
-            <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+            <%= link_to "削除", book_book_comment_path(book, book_comment), method: :delete, remote:true%>
           <% end %>
         </p>
         <%= book_comment.user.name %>
         
         <% end %>
-      </div>
+      
