--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,1 +1,3 @@
-$(".comment_index").html("<%= j(render 'books/comment_index', book: @book) %>");
+$(".comment_index").html("<%= j(render 'book_comments/comment_index', book: @book) %>");
+$('#comment_counter').html("<%= j(render 'book_comments/counter', book: @book )%>");
+$('#comment_textarea').val("");
